--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -11,7 +11,8 @@ plugins {
 android {
     namespace = "com.example.commerce_app_project"
     compileSdk = flutter.compileSdkVersion
-    ndkVersion = flutter.ndkVersion
+    ndkVersion "25.1.8937393"
+
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
