--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,12 @@ dependencies:
   google_fonts: ^6.2.1
   firebase_core: ^3.12.1
   firebase_auth: ^5.5.1
+  flutter_screenutil: ^5.9.3
+  flutter_bloc: ^9.1.0
+  http: ^1.3.0
+  awesome_dialog: ^3.2.1
+  dartz: ^0.10.1
+  connectivity_plus: ^6.1.3
 
 dev_dependencies:
   flutter_test:
@@ -63,7 +69,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/images/logo.png
+     - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
